<resources>
    <string name="app_name">My App Portfolio</string>
    <!-- Main Activity -->
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="app_popular_movies">Popular Movies</string>
    <string name="app_stock_hawk">Stock Hawk</string>
    <string name="app_build_bigger">Build it Bigger</string>
    <string name="app_material">Make Your App Material</string>
    <string name="app_go_ubiquitous">Go Ubiquitous</string>
    <string name="app_capstone">Capstone</string>
</resources>
