<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iamzhaoyuan.android.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/app_popular_movies"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:text="@string/app_stock_hawk"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:text="@string/app_build_bigger"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn3"
        android:text="@string/app_material"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn4"
        android:text="@string/app_go_ubiquitous"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn5"
        android:text="@string/app_capstone"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        android:background="@color/colorUdacity"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:onClick="openTheApp"/>
</RelativeLayout>
